# faas-infra-blueprint

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  .gitmessage  .gitmodules  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE_FAAS_BLUEPRINT.md  Cargo.toml  DOCKERFILES.md  Dockerfile  FIRECRACKER_ARCHITECTURE.md  FaaS.md  GATEWAY_IMPLEMENTATION.md  MIGRATION.md  NEW_FEATURES.md  OPERATOR_SELECTION_DESIGN.md  PERFORMANCE_ARCHITECTURE_PLAN.md  PERFORMANCE_REPORT.md  PERFORMANCE_ROADMAP.md  PLATFORM.md  PLATFORM_COMPARISON.md  PLATFORM_STATUS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_REPORT.md  Plan.md  README.md  REAL_IMPLEMENTATION_STATUS.md  SDK_ARCHITECTURE.md  SDK_SPEC.md  SNAPSHOT_ROADMAP.md  TANGLE_BLUEPRINT_ANALYSIS.md  TANGLE_INTEGRATION_LEARNINGS.md  ULTRA_FAST_EXECUTION_STRATEGY.md  build-cached-tests.sh  check_env.sh  docker-compose.cached-test.yml  (+12 more)
crates/faas-common/: Cargo.toml
crates/faas-common/src/: lib.rs
crates/faas-executor/: Cargo.toml  Dockerfile.alpine-test  Dockerfile.criu-firecracker  Dockerfile.criu-firecracker-cached  Dockerfile.minimal-test  Dockerfile.test  README.md  docker-compose.test.yml  test-linux-features.sh
crates/faas-executor/benches/: checkpoint_bench.rs  executor_bench.rs
crates/faas-executor/src/: container_pool.rs  docker_fork.rs  docker_snapshot.rs  environment_registry.rs  executor.rs  firecracker.rs  lib.rs  readiness.rs  snapshot.rs  ssh.rs  sync.rs  test_utils.rs
crates/faas-executor/src/criu/: container.rs  mod.rs  storage.rs
crates/faas-executor/src/firecracker/: guest_agent.rs  mod.rs  vm_cache.rs  vm_fork.rs  vm_manager.rs  vm_scaling.rs  vm_snapshot.rs
crates/faas-executor/src/firecracker/communication/: executor.rs  mod.rs  serial.rs  vsock.rs
crates/faas-executor/src/performance/: cache_manager.rs  container_pool.rs  metrics_collector.rs  mod.rs  predictive_scaling.rs  snapshot_optimizer.rs
crates/faas-executor/src/platform/: executor.rs  fork.rs  memory.rs  mod.rs  snapshot.rs
crates/faas-executor/src/storage/: adapters.rs  blob.rs  cache.rs  integration.rs  manifest.rs  mod.rs  tier.rs
crates/faas-executor/tests/: chaos_tests.rs  comprehensive_tests.rs  coverage_report.md  critical_security_tests.rs  criu_tests.rs  docker_criu_test.rs  docker_integration.rs  edge_cases_test.rs  execution.rs  execution_modes.rs  executor_test.rs  features.rs  integration_tests.rs  mock_tests.rs  network_chaos.rs  performance.rs  performance_tests.rs  platform.rs  platform_integration_tests.rs  platform_setup_test.rs  production_performance_tests.rs  real_failure_scenarios.rs  real_performance_tests.rs  security.rs  snapshot_test.rs  snapshots.rs  ssh.rs  vm_integration_tests.rs
crates/faas-gateway/: Cargo.toml
crates/faas-gateway-server/: Cargo.toml
crates/faas-gateway-server/src/: executor_wrapper.rs  lib.rs  main.rs  streaming.rs  tests.rs  types.rs
crates/faas-gateway/src/: lib.rs
crates/faas-gateway/src/blueprint/: backend.rs  handlers.rs  local_backend.rs  mod.rs  tangle_backend.rs
crates/faas-guest-agent/: Cargo.toml
crates/faas-guest-agent/src/: main.rs
crates/faas-orchestrator/: Cargo.toml
crates/faas-orchestrator/src/: lib.rs
crates/faas-sdk/: Cargo.toml  README.md
crates/faas-sdk/examples/: complete_demo.rs
crates/faas-sdk/src/: lib.rs  tangle.rs
crates/faas-sdk/tests/: basic_tests.rs  integration_tests.rs
crates/faas-usage-tracker/: Cargo.toml
crates/faas-usage-tracker/src/: lib.rs  storage.rs  tracker.rs  types.rs
crates/faas-usage-tracker/tests/: integration_tests.rs
crates/faas-zk-prover/: Cargo.toml  README.md  build.rs
crates/faas-zk-prover/sp1-guest-examples/fibonacci-example/: Cargo.toml
crates/faas-zk-prover/sp1-guest-examples/fibonacci-example/src/: main.rs
crates/faas-zk-prover/src/: blueprint_service.rs  main.rs
crates/faas-zkvm/: Cargo.toml
crates/faas-zkvm/src/: lib.rs
crates/faas-zkvm/tests/: integration_test.rs
examples/cicd/: Cargo.toml  README.md
examples/cicd/src/: main.rs
examples/distributed-agents/: Cargo.toml
examples/distributed-agents/src/: main.rs
examples/faas-sdk/: Cargo.toml
examples/faas-sdk/src/: lib.rs
examples/opencode-cloud-dev/: Cargo.toml  README.md  build.rs
examples/opencode-cloud-dev/opencode-server/: Dockerfile  package-lock.json  package.json  start-server.sh
examples/opencode-cloud-dev/opencode-server/src/: server.js  server.ts
examples/opencode-cloud-dev/src/: main.rs
examples/real-data-pipeline/: Cargo.toml
examples/real-data-pipeline/src/: main.rs
examples/remote-dev/: Cargo.toml
examples/remote-dev/src/: main.rs
examples/sdk-integration/: Cargo.toml
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/streaming-demo/: Cargo.toml
examples/streaming-demo/src/: main.rs
examples/zk-faas/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
examples/zk-faas/guest-programs/fibonacci/: Cargo.toml
examples/zk-faas/guest-programs/fibonacci/src/: main.rs
examples/zk-faas/guest-programs/hash-preimage/: Cargo.toml
examples/zk-faas/src/: main.rs  registry.rs
faas-bin/: Cargo.toml  Dockerfile  build.rs
faas-bin/src/: main.rs
faas-bin/tests/: blueprint_tests.rs
faas-lib/: Cargo.toml
faas-lib/benches/: platform_benchmarks.rs
faas-lib/src/: api_routes.rs  api_server.rs  context.rs  jobs.rs  lib.rs
faas-lib/tests/: api.rs  blockchain_benchmarks.rs  critical_tests_needed.md  e2e.rs  integration.rs  integration_tests.rs  job_integration_test.rs  jobs.rs  minimal_test.rs  multi_operator_orchestration.rs  multi_operator_selection.rs  performance.rs  performance_benchmarks.rs  real_world_benchmarks.rs  smoke_test.rs  support.rs  tangle.rs  tangle_jobs.rs  ultrafast_benchmarks.rs
faas-tester/: Cargo.toml
faas-tester/tests/: execution_tests.rs  integration_tests.rs
sdks/python/: CHANGELOG.md  README.md  faas_sdk.py  pyproject.toml  run-integration-tests.sh  test_basic.py  test_faas_sdk.py
sdks/python/tests/: test_convenience_methods.py  test_integration.py
tests/integration/: Cargo.toml  e2e_test.rs  examples_test.rs
(+92 files in other folders)
