[workspace]
resolver = "2"

members = [
    "faas-lib",
    "faas-bin",
    "crates/faas-common",
    "crates/faas-gateway",
    "crates/faas-gateway-server",
    "crates/faas-executor",
    "crates/faas-sdk",
    "crates/faas-zkvm",
    "faas-tester",
    "crates/faas-guest-agent",
    "crates/faas-usage-tracker",
    "examples/advanced-features",
    "examples/cicd",
    "examples/data-pipeline",
    "examples/opencode-cloud-dev",
    "examples/quickstart",
    "examples/streaming-demo",
]

exclude = [
    "dependencies/",
    "crates/faas-zk-prover", # Excluded: sp1-sdk conflicts with blueprint-sdk (both link to c-kzg)
]

# Define common dependencies for the workspace
[workspace.dependencies]
# Local Crates
faas-common = { path = "crates/faas-common" }
faas-blueprint-lib = { path = "faas-lib" }
faas-blueprint-bin = { path = "faas-bin" }
faas-gateway = { path = "crates/faas-gateway" }
faas-executor = { path = "crates/faas-executor" }

# Async Runtime & Utils
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Web & API
# actix-web = "4"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Docker Control
bollard = "0.18"
docktopus = { git = "https://github.com/tangle-network/docktopus", branch = "drew/config-overrides" }
futures = "0.3"

# gRPC (Keep for potential internal use within lib/bin, or future needs)
tonic = "0.11"
prost = "0.12"
tonic-build = { version = "0.11", default-features = false, features = ["prost"] }

# Blueprint SDK
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint", default-features = false, features = [
    "evm",
    "std",
    "build",
    "tangle",
] }
blueprint-client-tangle = { git = "https://github.com/tangle-network/blueprint" }
tangle-subxt = "0.24.0"
color-eyre = "0.6"
tower = { version = "0.5", default-features = false }

# Testing Utilities
tempfile = "3.3"
criterion = { version = "0.5", features = ["async_tokio"] }

# Additional dependencies needed by executor
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
ignore = "0.4"
glob = "0.3"
filetime = "0.2"
tar = "0.4"
rand = "0.9"
ring = "0.17"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
firecracker-rs-sdk = { version = "0.1.0", features = ["_rt-tokio"] }

# SCALE Codec
parity-scale-codec = { version = "3.0", features = ["derive"] }

# Compression for CRIU checkpoints
zstd = "0.13"
lz4 = "1.24"

# Workspace package metadata (inherited by default)
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Drew Stone <drewstone329@gmail.com>"]     # Updated author
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/faas"
readme = "README.md"
