[package]
name = "faas-blueprint-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "faas-blueprint"
path = "src/main.rs"

[dependencies]
# Local Libs
faas-blueprint-lib = { workspace = true }
faas-common = { workspace = true }

# Blueprint Dependencies
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
color-eyre = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }                                                     # For TangleArgs deserialization

# Other utils
dotenvy = { workspace = true }

[build-dependencies]
tempfile = { workspace = true }
blueprint-sdk = { workspace = true, features = ["build", "tangle", "macros", "testing"] }
faas-blueprint-lib = { workspace = true }
