[package]
name = "faas-blueprint-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "faas_blueprint_lib"
path = "src/lib.rs"

[dependencies]
faas-common = { workspace = true, features = ["scale"] }
faas-executor = { workspace = true }
faas-gateway = { workspace = true }

tokio = { workspace = true, features = ["net"] }
bollard = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros"] }
docktopus = { workspace = true }
thiserror = { workspace = true }
parity-scale-codec = { workspace = true, optional = true }
axum = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
rand = "0.8"
async-trait = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = { workspace = true }
color-eyre = { workspace = true }
blueprint-sdk = { workspace = true, features = ["std", "tangle", "macros", "testing"] }
faas-blueprint-lib = { path = ".", features = ["scale"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
faas-executor = { workspace = true }
tracing-subscriber = { workspace = true }
parity-scale-codec = { version = "3.0", features = ["derive"] }
serde_json = { workspace = true }

[features]
scale = ["parity-scale-codec", "faas-common/scale"]
testing = ["blueprint-sdk/testing"]

[[bench]]
name = "platform_benchmarks"
harness = false
