[package]
name = "faas-executor"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = false

[lib]
name = "faas_executor"
path = "src/lib.rs"

[dependencies]
# Workspace Crates
faas-common = { workspace = true }

# All from workspace
docktopus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }

# Use tracing directly for logging
tracing = { workspace = true }

# Executor specific (move to workspace if needed elsewhere)
firecracker-rs-sdk = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
filetime = { workspace = true }
tar = { workspace = true }
bloom = "0.3"
rand = { workspace = true }
ring = { workspace = true }
ssh-key = { workspace = true }
dashmap = "5.5"
bincode = "1.3"
lz4_flex = "0.11"
md5 = "0.7"
libc = "0.2"
lru = "0.12"
zstd = { workspace = true }
lz4 = { workspace = true }
object_store = { version = "0.11", features = ["aws", "http"], optional = true }
bytes = { version = "1.7", optional = true }
url = "2.5"

[features]
default = ["object-storage"]
object-storage = ["dep:object_store", "dep:bytes"]
checkpoint-tests = []
firecracker-tests = []

[dev-dependencies]
bollard = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }
serial_test = "3"

[[bench]]
name = "executor_bench"
harness = false

[[bench]]
name = "checkpoint_bench"
harness = false
