[package]
name = "faas-gateway-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "faas-gateway"
path = "src/main.rs"

[dependencies]
faas-executor = { path = "../faas-executor" }
faas-gateway = { path = "../faas-gateway" }
faas-common = { path = "../faas-common" }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
hyper = "1"
futures = "0.3"
async-stream = "0.3"
md5 = "0.7"
tokio-stream = "0.1"