[package]
name = "faas-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "faas_gateway"
path = "src/lib.rs"

[dependencies]
faas-common = { workspace = true }
faas-executor = { workspace = true }

# Web Framework
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Async & Utils
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Blueprint integration
zip = "0.6"
rand = { workspace = true }
base64 = { workspace = true }

# Tangle SDK (optional)
faas-sdk = { path = "../faas-sdk", optional = true }

# Logging
tracing = { workspace = true }

[features]
default = []
tangle = ["faas-sdk/tangle"]
