[package]
name = "faas-client-sdk"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Comprehensive SDK for FaaS Platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"

[dev-dependencies]
mockito = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }