[package]
name = "faas-sdk"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Comprehensive SDK for FaaS Platform"

[features]
default = []
tangle = ["blueprint-sdk", "subxt"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"

# Tangle blockchain dependencies (optional)
blueprint-sdk = { path = "/Users/drew/webb/gadget/crates/sdk", optional = true }
subxt = { version = "0.37", optional = true }

[dev-dependencies]
mockito = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }