[package]
name = "faas-zkvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Zero-Knowledge Virtual Machine integration for FaaS Platform"

[dependencies]
# Core dependencies - use workspace versions to avoid conflicts
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

# Crypto (minimal, no blockchain dependencies)
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
