[package]
name = "distributed-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-executor = { path = "../../crates/faas-executor" }
faas-common = { path = "../../crates/faas-common" }
bollard = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
futures = "0.3"

[[bin]]
name = "agent-branching"
path = "src/main.rs"