[package]
name = "faas-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-executor = { path = "../../crates/faas-executor" }
faas-common = { path = "../../crates/faas-common" }
bollard = "0.18"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
futures = "0.3"

[lib]
name = "faas_sdk"
path = "src/lib.rs"