[package]
name = "opencode-cloud-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-sdk = { path = "../../crates/faas-sdk" }
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }