[package]
name = "opencode-cloud-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-sdk = { path = "../../crates/faas-sdk" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
futures = "0.3"