[package]
name = "real-data-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-executor = { path = "../../crates/faas-executor" }
faas-common = { path = "../../crates/faas-common" }
bollard = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }