[package]
name = "zk-faas-example"
version = "0.1.0"
edition = "2021"

[dependencies]
faas-executor = { path = "../../crates/faas-executor" }
faas-common = { path = "../../crates/faas-common" }
bollard = "0.18"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "zk-faas"
path = "src/main.rs"