[package]
name = "zk-faas-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# FaaS SDK
faas-sdk = { path = "../../crates/faas-sdk" }

# Async runtime
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# For demonstration (not actual ZK proving yet)
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "zk-faas"
path = "src/main.rs"
