[package]
name = "zk-faas-example"
version = "0.1.0"
edition = "2021"

# Standalone workspace to avoid conflicts with blueprint-sdk's ckzg
[workspace]

[dependencies]
faas-sdk = { path = "../../crates/faas-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"

# ZK Proving - SP1
sp1-sdk = "5.2"

# Crypto
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"

[build-dependencies]
sp1-build = "5.2"

[[bin]]
name = "zk-faas"
path = "src/main.rs"
